// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Empty hidden modal (snapshot) 1`] = `null`;

exports[`Modal Empty modal (snapshot) 1`] = `
<div
  className="modal-wrapper"
>
  <div
    className="modal"
  >
    <header
      className="modal-header"
    >
      <h3
        className="modal-header-title"
      />
      <button
        className="close"
        onClick={[Function]}
      >
        <span
          className="material-icons "
          color="inherit"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "color": "inherit",
              "display": "inline-block",
              "fontSize": 24,
              "muiPrepared": true,
              "position": "relative",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "userSelect": "none",
            }
          }
        >
          close
        </span>
      </button>
    </header>
    <div
      className="modal-body"
    />
  </div>
</div>
`;

exports[`Modal Modal with title (snapshot) 1`] = `
<div
  className="modal-wrapper"
>
  <div
    className="modal"
  >
    <header
      className="modal-header"
    >
      <h3
        className="modal-header-title"
      >
        Vegetables & fruit
      </h3>
      <button
        className="close"
        onClick={[Function]}
      >
        <span
          className="material-icons "
          color="inherit"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "color": "inherit",
              "display": "inline-block",
              "fontSize": 24,
              "muiPrepared": true,
              "position": "relative",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "userSelect": "none",
            }
          }
        >
          close
        </span>
      </button>
    </header>
    <div
      className="modal-body"
    />
  </div>
</div>
`;

exports[`Modal Modal with title and content with padding (snapshot) 1`] = `
<div
  className="modal-wrapper"
>
  <div
    className="modal"
  >
    <header
      className="modal-header"
    >
      <h3
        className="modal-header-title"
      >
        Vegetables & fruit
      </h3>
      <button
        className="close"
        onClick={[Function]}
      >
        <span
          className="material-icons "
          color="inherit"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "color": "inherit",
              "display": "inline-block",
              "fontSize": 24,
              "muiPrepared": true,
              "position": "relative",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "userSelect": "none",
            }
          }
        >
          close
        </span>
      </button>
    </header>
    <div
      className="modal-body"
    >
      <p>
        Buy here! You're favourite fruit and vegetables
      </p>
    </div>
  </div>
</div>
`;

exports[`Modal Modal with title and table without padding (snapshot) 1`] = `
<div
  className="modal-wrapper"
>
  <div
    className="modal"
  >
    <header
      className="modal-header"
    >
      <h3
        className="modal-header-title"
      />
      <button
        className="close"
        onClick={[Function]}
      >
        <span
          className="material-icons "
          color="inherit"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "color": "inherit",
              "display": "inline-block",
              "fontSize": 24,
              "muiPrepared": true,
              "position": "relative",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "userSelect": "none",
            }
          }
        >
          close
        </span>
      </button>
    </header>
    <div
      className="modal-body modal-body--withoutPadding"
    >
      <table
        className="showcase-modal-table"
      >
        <tr>
          <th>
            Color
          </th>
          <th>
            Fruits
          </th>
        </tr>
        <tr>
          <td>
            Red
          </td>
          <td>
            Apples, cherries, ...
          </td>
        </tr>
        <tr>
          <td>
            Green
          </td>
          <td>
            Green apples
          </td>
        </tr>
        <tr>
          <td>
            Orange
          </td>
          <td>
            oranges, mandarines, ...
          </td>
        </tr>
      </table>
    </div>
  </div>
</div>
`;
